# LingvoPal

./: .env.example  .env.prod.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CONTRIBUTING.md  DataBaseSQLiteDesign.txt  NewExperimentalBranch.txt  PostgreSQL db schema.txt  README.md  SQLiteDataBaseScema.txt  THESIS.md  docker-compose.yml  package-lock.json  package.json  render.yaml  sample.txt
backend/: .dockerignore  .env.example  .env.staging  Dockerfile  README.md  alembic.ini  pyproject.toml  pyrightconfig.json  requirements.txt  schema.sql  seed.sql
backend/app/: main.py
backend/app/core/: config.py  dependencies.py  exceptions.py  http_errors.py  limiter.py  redis.py  security.py  token_types.py
backend/app/database/: __init__.py  base.py  mixins.py  session.py  session_utils.py
backend/app/models/: __init__.py  content_audit_log.py  content_complaint.py  enums.py  item.py  item_quality_metrics.py  item_synonym.py  item_synonym_term.py  language.py  pending_moderation.py  pending_session.py  set.py  set_item.py  study_review.py  study_session.py  translation.py  user.py  user_daily_stats.py  user_language.py  user_progress.py  user_set_library.py  user_stats_total.py
backend/app/repositories/: audit_repo.py  base_repo.py  complaint_repo.py  item_repo.py  moderation_repo.py  practice_repo.py  quality_repo.py  set_repo.py  specifications.py  stats_repo.py  study_queries.py  user_language_repo.py  user_repo.py  user_settings_repo.py
backend/app/routes/: admin.py  auth.py  import_routes.py  items.py  languages.py  moderation.py  practice.py  sets.py  stats.py  user_settings.py  users.py
backend/app/schemas/: __init__.py  admin.py  anki_import.py  auth.py  common.py  complaint.py  item.py  language.py  lpset.py  moderation.py  practice.py  set.py  stats.py  user.py  user_language.py  user_settings.py
backend/app/services/: ai_enrichment_service.py  anki_import_service.py  anki_parser.py  answer_evaluator.py  auth_service.py  complaint_service.py  content_validator.py  email_change_service.py  email_service.py  email_verification_service.py  hashing.py  image_search_service.py  item_service.py  item_suggestion_service.py  lemmatization_service.py  lpset_export_service.py  lpset_import_service.py  moderation_service.py  morphology.py  password_reset_service.py  practice_service.py  progress_updater.py  refresh_token_service.py  session_manager.py  session_sweeper.py  set_service.py  sm2_engine.py  stats_service.py  storage.py  tts_service.py  user_language_service.py  user_profile_service.py  user_settings_service.py
backend/migrations/: env.py
backend/migrations/versions/: 246fdd13f6ee_sync_model_drift_to_current_models.py  31041260b64b_initial_create_tables_and_model_defined_.py  375a1ab09e48_initial_schema.py  3a0082bac017_sync_model_drift_text_cols_uq_user_.py  497834a509ad_add_triggers.py  766670f924f5_add_timestamp_triggers.py  7d146174ed2c_small_changes.py  8a8a4dcf2ed9_add_stats_repair_functions.py  928f022370b7_init.py  b3c4d5e6f7a8_add_pending_email_to_users.py  b8b38838f78b_add_stats_sync_trigger.py  c7d8e9f0a1b2_partial_unique_email_username.py  zzzz_drift_trial.py  (+2 more)
backend/scripts/: bootstrap_prod.py  seed_db.py  seed_official.py
backend/tests/: test_anki_parser.py  test_answer_evaluator.py  test_auth.py  test_content_validator.py  test_email_service.py  test_hashing.py  test_morphology.py  test_redis_token_services.py  test_session_sweeper_pure.py  test_settings.py  test_sm2_engine.py  test_stats.py
(+241 files in other folders)
