[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.3",
    "asyncpg>=0.31.0",
    "celery>=5.6.2",
    "fastapi>=0.128.4",
    "passlib>=1.7.4",
    "psycopg>=3.3.3",
    "pydantic-settings>=2.12.0",
    "PyJWT>=2.9.0",
    "slowapi>=0.1.9",
    "python-multipart>=0.0.22",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.46",
    "starlette>=0.52.1",
    "uvicorn>=0.40.0",
    "python-dotenv>=1.0",
    "pydantic[email]>=2.12.5",
    "bcrypt==4.3.0",
    "aioboto3>=15.5.0",
    "aiosmtplib>=5.1.0",
    "langdetect>=1.0.9",
    "better-profanity>=0.7.0",
    "spacy>=3.8.14",
    "httpx>=0.28.0",
    "google-genai>=1.0.0",
    "google-cloud-texttospeech>=2.17.0",
    "google-auth>=2.38.0",
    "python-json-logger>=4.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
    "pytest>=9.0.3",
]

# =============================================================================
# Pytest
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
# anyio tests use @pytest.mark.anyio — no asyncio_mode needed

# =============================================================================
# Ruff
# =============================================================================

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    # F821: undefined name — false positives for string annotations with lazy imports
    # (dependencies.py uses "ClassName" forward refs where the class is imported inside the function)
    "F821",
    # E501: line too long — not enforced; formatter handles wrapping where practical
    "E501",
]

[tool.ruff.lint.per-file-ignores]
# Alembic env.py imports models only to populate Base.metadata — not referenced by name
"migrations/env.py" = ["F401"]
# seed_db.py modifies sys.path before app imports — E402 is intentional
"scripts/seed_db.py" = ["E402"]
# Tests may import fixtures/markers not directly referenced in function bodies
"tests/*" = ["F401"]
